[package]
name = "peek-reverse-proxy"
version = "0.1.1"
edition = "2021"
rust-version = "1.56.0"
description = "A simple reverse proxy to peek into requests"
license = "MIT"
repository = "https://github.com/somehowchris/peek-reverse-proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-reverse-proxy = "0.5.1"
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.18.0", features = ["full"] }
url = "2.2.2"
tracing = "0.1.34"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.11", features = [
    "env-filter",
    "json",
    "registry",
    "smallvec",
] }
futures = "0.3.21"
tokio-core = "0.1.18"
serde_json = "1.0.80"
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "1.0.0", features = ["v4"] }
