[package]
name = "peek-reverse-proxy"
version = "0.1.9"
edition = "2021"
rust-version = "1.56.0"
description = "A simple reverse proxy to peek into requests"
license = "MIT"
repository = "https://github.com/somehowchris/peek-reverse-proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-reverse-proxy = "0.5.1"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros", "signal"] }
url = "2.2.2"
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = [
    "env-filter",
    "json",
    "registry",
    "smallvec",
] }
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4"] }

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }.txz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "txz"